argocd/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-argocd
  namespace: argocd
spec:
  ingressClassName: ingress-nginx 
  rules:
  - host: argocd.k3s
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific 
        backend:
          service:
            name: argocd-server
            port:
              number: 80
